--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "central-spec-configs": "bin/speckit.js"
+    "central-spec-configs": "bin/setup.sh"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
